--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   firebase_auth: "^0.20.1"
   flutter_spinkit: ^4.1.2
   firebase_dynamic_links: any
+  flutter_tts: 2.1.0
 
 dev_dependencies:
   flutter_test:
